--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "react-icons": "^4.7.1",
     "react-scroll": "^1.8.9",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
